Reduced spacing on About us, fixed weird image rendering on homepage

--- a/css/about-us.css
+++ b/css/about-us.css
@@ -1,5 +1,5 @@
 #who_we_are {
-  padding-bottom: 150px;
+  padding-bottom: 30px;
 }
 .who-we-are-text .separator {
   background: #d9d9d9;
